# CaRL

./: .gitignore  LICENSE  README.md  environment.yml  run_evaluation_slurm.sh
CARLA/: .env.example  .gitignore  README.md  environment.yml  evaluate_routes_slurm.py  pyproject.toml  run_evaluation_slurm.sh
CARLA/results/CaRL_CPP_04/: config.json  events.out.tfevents.1742687555.pb  events.out.tfevents.1742695968.pb  events.out.tfevents.1742696568.pb  events.out.tfevents.1742702271.pb  events.out.tfevents.1742703533.pb  events.out.tfevents.1742711083.pb  events.out.tfevents.1742711921.pb  events.out.tfevents.1742717266.pb  events.out.tfevents.1742720724.pb  events.out.tfevents.1742724991.pb  events.out.tfevents.1742727243.pb  events.out.tfevents.1742729496.pb  events.out.tfevents.1742733254.pb  events.out.tfevents.1742735494.pb  events.out.tfevents.1742737192.pb  events.out.tfevents.1742737919.pb  events.out.tfevents.1742738819.pb  events.out.tfevents.1742743897.pb  events.out.tfevents.1742747507.pb  events.out.tfevents.1742751173.pb  (+322 more)
CARLA/team_code/: dd_ppo.py  distributions.py  env_agent.py  env_gym.py  eval_agent.py  inference_example.sh  model.py  nav_planner.py  requirements.txt  rl_config.py  rl_utils.py  start_leaderboard.sh  start_learner_ac_ppo.sh  start_learner_dd_ppo.sh  start_learner_gs_ppo.sh  train_carl_cpp.sh  train_carl_py.sh  train_carl_tiny_cpp.sh  train_parallel.py  train_roach.sh
CARLA/tools/: 0_generate_routes_with_old_scenarios.sh  extract_scenario_by_type.py  extract_valid_parameter_ranges.py  find_all_scenario_types.py  generate_long_routes_with_scenarios.py  generate_utils.py  make_singularity_image_2_rl.def  result_parser.py
(+1574 files in other folders)
