[project]
name = "carl-carla"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "carla (==0.9.15)",
    "torch (>=2.8.0,<3.0.0)",
    "torchaudio (>=2.8.0,<3.0.0)",
    "torchvision (>=0.23.0,<0.24.0)",
    "dictor (>=0.1.12,<0.2.0)",
    "ephem (>=4.2,<5.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "jsonpickle (>=4.1.1,<5.0.0)",
    "laspy (>=2.6.1,<3.0.0)",
    "laszip (>=0.2.3,<0.3.0)",
    "lxml (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "networkx (<3.5)",
    "numpy (<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "opencv-python (<4.7.0.0)",
    "pexpect (>=4.9.0,<5.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "py-trees (<1.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pytictoc (>=1.5.3,<2.0.0)",
    "pyzmq (>=27.0.2,<28.0.0)",
    "rdp (>=0.8,<0.9)",
    "requests (>=2.32.5,<3.0.0)",
    "scipy (<1.16.0)",
    "shapely (>=2.1.1,<3.0.0)",
    "simple-watchdog-timer (>=0.1.1,<0.2.0)",
    "six (>=1.17.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "tensorboard (>=2.20.0,<3.0.0)",
    "tensorboardx (>=2.6.4,<3.0.0)",
    "timm (>=1.0.19,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "transforms3d (>=0.4.2,<0.5.0)",
    "ujson (>=5.11.0,<6.0.0)",
    "wandb (>=0.21.3,<0.22.0)",
    "webcolors (>=24.11.1,<25.0.0)",
    "xmlschema (>=4.1.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
